--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 colored = "3.0.0"
 sysinfo = "0.35.0"
 libc = "0.2.172"
+pci-info = { version = "0.3.2", default-features = false }
+pci-ids = { version = "0.2.5", default-features = false }
