--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ sysinfo = "0.35.0"
 libc = "0.2.172"
 pci-info = { version = "0.3.2", default-features = false }
 pci-ids = { version = "0.2.5", default-features = false }
+
+[build-dependencies]
+anyhow = "1.0.98"
